--- a/locales/fr.json
+++ b/locales/fr.json
@@ -38,5 +38,5 @@
     "company-dashboard.name": "",
     "company-dashboard.website": "",
     "company-dashboard.headline-company-description": "",
-    "company-dashboard.heading-general-info": ""
+    "company-dashboard.heading-general-info": "informations générales"
 }
