--- a/locales/de/fpc.json
+++ b/locales/de/fpc.json
@@ -38,5 +38,13 @@
     "company-dashboard.name": "Name",
     "company-dashboard.website": "Webseite",
     "company-dashboard.headline-company-description": "Firmenbeschreibung",
-    "company-dashboard.heading-general-info": "Allgemeine Informationen"
+    "company-dashboard.heading-general-info": "Allgemeine Informationen",
+    "test.label": "",
+    "test.plural": "",
+    "test.headline": "",
+    "test.greeting": "",
+    "test.title": "Mein Konto freischalten",
+    "test.text": "Aktivieren Sie einfach Ihr Konto und erstellen Sie Ihr Passwort bis zum [Datum].",
+    "test.paragraph": "Willkommen bei ClimatePartner. Wir haben Ihr Benutzerkonto eingerichtet.",
+    "test.plural.19": ""
 }
