--- a/locales/en/fpc.json
+++ b/locales/en/fpc.json
@@ -38,5 +38,12 @@
     "company-dashboard.name": "Name",
     "company-dashboard.website": "Website",
     "company-dashboard.headline-company-description": "Company Description hello!",
-    "company-dashboard.heading-general-info": "General information"
+    "company-dashboard.heading-general-info": "General information",
+    "test.label": "Label",
+    "test.plural": "You have subscribed to {number} services.",
+    "test.headline": "Successful newsletter signup",
+    "test.greeting": "Hello {firstName} {lastName},",
+    "test.title": "Activate my account",
+    "test.text": "Simply activate your account and create your password by [date].",
+    "test.paragraph": "Welcome to ClimatePartner. We have created your user account."
 }
