Add activate button translation

--- a/public/locales/en/fpc.json
+++ b/public/locales/en/fpc.json
@@ -45,5 +45,6 @@
     "test.greeting": "Hello {firstName} {lastName},",
     "test.title": "Activate my account",
     "test.text": "Simply activate your account and create your password by [date].",
-    "test.paragraph": "Welcome to ClimatePartner. We have created your user account."
+    "test.paragraph": "Welcome to ClimatePartner. We have created your user account.",
+    "test.button": "Activate Account"
 }
