--- a/public/locales/de/fpc.json
+++ b/public/locales/de/fpc.json
@@ -45,5 +45,6 @@
     "test.greeting": "",
     "test.title": "Mein Konto freischalten",
     "test.text": "Aktivieren Sie einfach Ihr Konto und erstellen Sie Ihr Passwort bis zum [Datum].",
-    "test.paragraph": "Willkommen bei ClimatePartner. Wir haben Ihr Benutzerkonto eingerichtet."
+    "test.paragraph": "Willkommen bei ClimatePartner. Wir haben Ihr Benutzerkonto eingerichtet.",
+    "test.button": ""
 }
