Add activate button translation

--- a/public/locales/es/fpc.json
+++ b/public/locales/es/fpc.json
@@ -1,34 +1,8 @@
 {
-    "demo.email": "",
     "demo.title": "Comience a tomar medidas climáticas",
     "demo.text": "Simplemente active su cuenta y cree su contraseña antes del [fecha].",
-    "demo.managing-directors": "",
-    "demo.address": "",
     "demo.paragraph": "Bienvenido a ClimatePartner. Hemos creado tu cuenta de usuario.",
-    "demo.hello": "",
-    "demo.phone": "",
-    "demo.copy": "",
-    "demo.subline": "",
-    "demo.copyright": "",
-    "demo.links": "",
-    "demo.subline.79": "",
-    "demo.wishes": "",
     "demo.button": "activar mi cuenta",
-    "demo.body-text": "",
-    "demo.cp-team": "",
-    "demo.terms-and-conditions+privacy": "",
-    "company-dashboard.label": "",
-    "company-dashboard.h1": "",
-    "company-dashboard.h2": "",
-    "company-dashboard.value": "",
-    "company-dashboard.logo-not-available": "",
-    "company-dashboard.company-name": "",
-    "company-dashboard.company-url": "",
-    "company-dashboard.legal-name": "",
-    "company-dashboard.menu.home": "",
-    "company-dashboard.button": "",
-    "company-dashboard.helper-text.required": "",
-    "company-dashboard.body-text": "",
     "company-dashboard.label.link-to-report": "Enlace al Informe de Sostenibilidad",
     "company-dashboard.placeholder.about-the-company": "Algo sobre la empresa",
     "company-dashboard.button.remove-language": "quitar idioma",
@@ -40,11 +14,9 @@
     "company-dashboard.headline-company-description": "Descripción de la empresa hola!",
     "company-dashboard.heading-general-info": "Información general",
     "test.label": "Etiqueta",
-    "test.plural": "",
     "test.headline": "Suscripción exitosa al boletín",
     "test.greeting": "Hola {firstName} {lastName} ,",
     "test.title": "activar mi cuenta",
     "test.text": "Simplemente active su cuenta y cree su contraseña antes del [fecha].",
-    "test.paragraph": "Bienvenido a ClimatePartner. Hemos creado tu cuenta de usuario.",
-    "test.button": ""
+    "test.paragraph": "Bienvenido a ClimatePartner. Hemos creado tu cuenta de usuario."
 }
