--- a/public/locales/de/fpc.json
+++ b/public/locales/de/fpc.json
@@ -39,12 +39,7 @@
     "company-dashboard.website": "Webseite",
     "company-dashboard.headline-company-description": "Firmenbeschreibung",
     "company-dashboard.heading-general-info": "Allgemeine Informationen",
-    "test.label": "",
-    "test.plural": "",
-    "test.headline": "",
-    "test.greeting": "",
     "test.title": "Mein Konto freischalten",
     "test.text": "Aktivieren Sie einfach Ihr Konto und erstellen Sie Ihr Passwort bis zum [Datum].",
-    "test.paragraph": "Willkommen bei ClimatePartner. Wir haben Ihr Benutzerkonto eingerichtet.",
-    "test.button": ""
+    "test.paragraph": "Willkommen bei ClimatePartner. Wir haben Ihr Benutzerkonto eingerichtet."
 }
