--- a/public/locales/sv_SE/fpc.json
+++ b/public/locales/sv_SE/fpc.json
@@ -1,43 +1,5 @@
 {
-    "demo.email": "",
-    "demo.title": "",
-    "demo.text": "",
-    "demo.managing-directors": "",
-    "demo.address": "",
-    "demo.paragraph": "",
-    "demo.hello": "",
-    "demo.phone": "",
-    "demo.copy": "",
-    "demo.subline": "",
-    "demo.copyright": "",
-    "demo.links": "",
-    "demo.subline.79": "",
-    "demo.wishes": "",
-    "demo.button": "",
-    "demo.body-text": "",
-    "demo.cp-team": "",
-    "demo.terms-and-conditions+privacy": "",
-    "company-dashboard.label": "",
-    "company-dashboard.h1": "",
-    "company-dashboard.h2": "",
-    "company-dashboard.value": "",
-    "company-dashboard.logo-not-available": "",
-    "company-dashboard.company-name": "",
-    "company-dashboard.company-url": "",
-    "company-dashboard.legal-name": "",
-    "company-dashboard.menu.home": "",
-    "company-dashboard.button": "",
-    "company-dashboard.helper-text.required": "",
-    "company-dashboard.body-text": "",
-    "company-dashboard.label.link-to-report": "",
-    "company-dashboard.placeholder.about-the-company": "",
-    "company-dashboard.button.remove-language": "",
-    "company-dashboard.language": "",
-    "company-dashboard.button.40": "",
-    "company-dashboard.evaluation": "",
-    "company-dashboard.name": "",
     "company-dashboard.website": "Webbplats",
-    "company-dashboard.headline-company-description": "",
     "company-dashboard.heading-general-info": "Allmän information",
     "test.label": "Märka",
     "test.plural": "Du har prenumererat på {number} tjänster.",
@@ -45,6 +7,5 @@
     "test.greeting": "Hej {firstName} {lastName}",
     "test.title": "Aktivera mitt konto",
     "test.text": "Aktivera helt enkelt ditt konto och skapa ditt lösenord senast [datum].",
-    "test.paragraph": "Välkommen till ClimatePartner. Vi har skapat ditt användarkonto.",
-    "test.button": ""
+    "test.paragraph": "Välkommen till ClimatePartner. Vi har skapat ditt användarkonto."
 }
