--- a/public/locales/en/fpc.json
+++ b/public/locales/en/fpc.json
@@ -44,7 +44,7 @@
     "test.headline": "Successful newsletter signup",
     "test.greeting": "Hello {{ firstName }} {{ lastName}},",
     "test.title": "Activate my account",
-    "test.text": "Simply activate your account and create your password by [date].",
+    "test.text": "Simply activate your account and create your password by {{ date, datetime }}.",
     "test.paragraph": "Welcome to ClimatePartner. We have created your user account.",
     "test.button": "Activate Account"
 }
