--- a/public/locales/fr/fpc.json
+++ b/public/locales/fr/fpc.json
@@ -5,8 +5,8 @@
     "test.label": "Étiquette",
     "test.plural": "Vous êtes abonné aux services de {number} .",
     "test.headline": "Inscription à la newsletter réussie",
-    "test.greeting": "Bonjour {firstName} {lastName} ,",
+    "test.greeting": "Bonjour {{ firstName }} {{ lastName}},",
     "test.title": "Activer mon compte",
-    "test.text": "Activez simplement votre compte et créez votre mot de passe avant le [date].",
+    "test.text": "Activez simplement votre compte et créez votre mot de passe avant le  {{ date, datetime }}.",
     "test.paragraph": "Bienvenue chez ClimatePartner. Nous avons créé votre compte utilisateur."
 }
