--- a/locales/fr/fpc.json
+++ b/locales/fr/fpc.json
@@ -48,6 +48,6 @@
     "test.paragraph": "Bienvenue chez ClimatePartner. Nous avons créé votre compte utilisateur.",
     "test.button": "updates from newer branch",
     "hana.newkey": "",
-    "hana.secondNewKey": "",
+    "hana.secondNewKey": "seconde hi",
     "hana.duplicatekeyChanged": "mot"
 }
