--- a/locales/de/fpc.json
+++ b/locales/de/fpc.json
@@ -49,5 +49,5 @@
     "test.button": "",
     "hana.newkey": "",
     "hana.secondNewKey": "",
-    "hana.duplicatekeyChanged": ""
+    "hana.duplicatekeyChanged": "Wort"
 }
